<resources>
    <string name="app_name">Inventario NS</string>
    <string name="app_name_inventario">Lista completa</string>
    <string name="app_name_scan">Cámara</string>
    <string name="app_name_settings">Configuración</string>

    <!-- Strings related to ActionBar menu -->
    <string name="action_inventario">Ver Inventario</string>
    <string name="action_download">Descargar CSV</string>
    <string name="action_settings">Configuración</string>
    <string name="action_help">Ayuda</string>
    <string name="action_scan">Scan</string>
    <string name="action_add">Agregar</string>

    <string name="label_help">Se debe copiar el archivo inventario.csv en la carpeta Descargas o descargarlo de Internet.</string>
    <string name="label_ok">OK</string>

    <string name="permission_camera_rationale">Es necesario aceptar el uso de la cámara para poder leer los códigos de barra.</string>
    <string name="permission_read_external_storage">El permiso para acceder al Almacenamiento debe ser aceptado.</string>

    <string name="list_title">Mi Lista</string>

    <string name="button_clear">Limpiar</string>
    <string name="button_add">Agregar</string>

    <string name="title_column_code">Código</string>
    <string name="title_column_group">Grupo</string>
    <string name="title_column_brand">Marca</string>

    <string name="code_duplicated">Código duplicado</string>
    <string name="code_not_ok">Código incorrecto</string>

    <string name="download_ok">Descarga exitosa</string>
    <string name="download_error">Problemas para descargar el archivo</string>

    <string name="file_name">inventario.csv</string>
    <string name="file_url">https://newsan-ad.herokuapp.com/inventario</string>

    <!-- Strings related to Preferences -->
    <string name="pref_validate_title">Validar código ingresado</string>
    <string name="pref_validate_message">Si el código debe existir en la lista o no</string>
    <string name="pref_url_title">Url descarga</string>
    <string name="pref_url_message">Url donde se encuentra el archivo de inventario</string>
</resources>