<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/layCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="5dp"
        android:background="@color/colorText"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    style="@android:style/TextAppearance.Medium"
                    android:text="Codigo: " />
                <TextView
                    android:id="@+id/txtCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/TextAppearance.Medium"
                    android:text="" />
                <EditText
                    android:id="@+id/edtCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="13"
                    android:inputType="text"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:hint="(ingrese codigo)" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/TextAppearance.Medium"
                    android:text="Grupo: " />
                <TextView
                    android:id="@+id/txtGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/TextAppearance.Medium"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/TextAppearance.Medium"
                    android:text="Marca: " />
                <TextView
                    android:id="@+id/txtBrand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/TextAppearance.Medium"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
                <TextView
                    android:id="@+id/txtRemark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_add" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_clear" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/layCode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:background="@color/colorSecondaryText"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/layList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layDivider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    style="@android:style/TextAppearance.Medium"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:text="@string/list_title"/>
            <Button
                android:id="@+id/btnClearList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorPrimaryLight"
                android:layout_weight="1"
                android:drawableLeft="@android:drawable/ic_input_delete" />
        </LinearLayout>

        <ListView
            android:id="@+id/lvwList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorText"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>